<resources>
    <string name="app_name">Yelp Roulette</string>
    <string name="spin_button_text">SPIN!</string>

    <!-- Spinner text view names -->
    <string name="distance_text">Distance (Miles)</string>
    <string name="sort_by_text">How to sort results</string>
    <string name="open_now_text">open now</string>

    <!-- Price dollar sign values -->
    <string name="one_dollar_sign">$</string>
    <string name="two_dollar_sign">$$</string>
    <string name="three_dollar_sign">$$$</string>
    <string name="four_dollar_sign">$$$$</string>
    <string name="spin_button_description">Spin</string>
    <string name="price_text">price</string>

    <!-- Term values -->
    <string name="term_text">Term</string>
    <string name="term_hint">Leave blank and search anything </string>
    <!-- Open now button values -->
    <string name="open_now_yes">Yes</string>
    <string name="open_now_no">No</string>

    <!-- Progress Bar Layout values -->
    <string name="progress_bar_text">Finding Random Restaurant</string>
    <string name="business_title_string">SAMPLE SINGLE BUSINESS</string>

    <!-- Progress Bar Layout values -->
    <string name="zero_business_text">No restaurants found that fit your selection :(</string>

    <!-- Progress Bar Layout values -->
    <string name="error_dialog_text">Unexpected Error happened while trying to retrieve a restaurant. Please try again. </string>
    <string name="location_null_dialog_text">Location was not retrieved succesfully. Please go back and try again.</string>
    <string name="location_permission_denied_dialog_text">This app has not been granted permission. Please grant permissio in settings and try again</string>
    <string name="fetching_location_dialog_text">Please Wait. Location is being fetched from your phone. </string>


    <!-- single business activity string values -->
    <string name="business_food_image_view">BUSINESS FOOD PHOTO</string>
    <string name="num_of_ratings_place_holder">100</string>
    <string name="call_button">Call</string>
    <string name="directions_button">Directions</string>
    <string name="yelp_button">Yelp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>