<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.StartFragment">


    <TextView
        android:id="@+id/category_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_text"
        app:layout_constraintBottom_toTopOf="@id/category_text_input_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/category_text_input_edit_text"
        android:layout_width="@dimen/category_text_input_layout_width"
        android:layout_height="wrap_content"
        android:hint="@string/category_hint"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_mid_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_text_view" />

    <TextView
        android:id="@+id/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_text"
        app:layout_constraintBottom_toTopOf="@+id/distance_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_mid_guideline_right"
        app:layout_constraintTop_toTopOf="@id/horizontal_mid_guideline"
        app:layout_constraintHorizontal_bias="0.0"/>

    <org.angmarch.views.NiceSpinner
        android:id="@+id/distance_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_mid_guideline_two"
        app:layout_constraintStart_toStartOf="@id/distance_text_view"
        app:layout_constraintTop_toBottomOf="@id/distance_text_view" />



    <TextView
        android:id="@+id/sort_by_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_text"
        app:layout_constraintBottom_toTopOf="@id/sort_by_spinner"
        app:layout_constraintEnd_toStartOf="@id/distance_text_view"
        app:layout_constraintStart_toEndOf="@id/vertical_mid_guideline_left"
        app:layout_constraintTop_toTopOf="@id/horizontal_mid_guideline"
        app:layout_constraintHorizontal_bias=".25" />

    <org.angmarch.views.NiceSpinner
        android:id="@+id/sort_by_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/sort_by_text_view"
        app:layout_constraintStart_toStartOf="@id/sort_by_text_view"
        app:layout_constraintBottom_toTopOf="@id/horizontal_mid_guideline_two"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_mid_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_mid_guideline_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_mid_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_mid_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_mid_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />

    <TextView
        android:id="@+id/open_now_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_now_text"
        app:layout_constraintEnd_toStartOf="@id/vertical_mid_guideline_end"
        app:layout_constraintStart_toEndOf="@id/vertical_mid_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/horizontal_mid_guideline_two"
        app:layout_constraintBottom_toTopOf="@id/open_now_radio_group"
        app:layout_constraintVertical_bias="0.25"
        />

    <RadioGroup
        android:id="@+id/open_now_radio_group"
        android:layout_width="@dimen/open_now_radio_group_width"
        android:layout_height="@dimen/open_now_radio_group_height"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/price_linear_layout"
        app:layout_constraintEnd_toStartOf="@id/vertical_mid_guideline_end"
        app:layout_constraintStart_toEndOf="@id/vertical_mid_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/horizontal_mid_guideline_two">

        <RadioButton
            android:id="@+id/open_now_true"
            android:layout_width="@dimen/open_now_radio_button_width"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:background="@drawable/open_now_selected_background"
            android:button="@null"
            android:checked="true"
            android:onClick="onOpenNowButtonClick"
            android:text="@string/open_now_yes"
            android:textAlignment="center" />

        <RadioButton
            android:id="@+id/open_now_false"
            android:layout_width="@dimen/open_now_radio_button_width"
            android:layout_height="match_parent"
            android:elevation="8dp"
            android:background="@drawable/open_now_unselected_background"
            android:button="@null"
            android:onClick="onOpenNowButtonClick"
            android:text="@string/open_now_no"
            android:textAlignment="center" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/price_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/vertical_mid_guideline_end"
        app:layout_constraintStart_toEndOf="@id/vertical_mid_guideline_left"
        app:layout_constraintTop_toBottomOf="@id/open_now_radio_group"
        app:layout_constraintBottom_toTopOf="@id/spin_button">

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_text"
            android:paddingBottom="@dimen/price_bottom_padding"/>

        <LinearLayout
            android:id="@+id/price_button_linear_layout"
            android:layout_width="@dimen/price_radio_group_width"
            android:layout_height="@dimen/price_radio_group_height"
            android:orientation="horizontal">

            <android.widget.Button
                android:id="@+id/one_dollar_sign_button"
                android:layout_width="@dimen/price_radio_button_width"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:textAlignment="center"
                android:text="@string/one_dollar_sign"
                android:background="@drawable/price_button_effect"
                android:onClick="onPriceButtonClick" />

            <android.widget.Button
                android:id="@+id/two_dollar_sign_button"
                android:layout_width="@dimen/price_radio_button_width"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:textAlignment="center"
                android:text="@string/two_dollar_sign"
                android:background="@drawable/price_button_effect"
                android:onClick="onPriceButtonClick" />

            <android.widget.Button
                android:id="@+id/three_dollar_sign_button"
                android:layout_width="@dimen/price_radio_button_width"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:textAlignment="center"
                android:text="@string/three_dollar_sign"
                android:background="@drawable/price_button_effect"
                android:onClick="onPriceButtonClick" />

            <android.widget.Button
                android:id="@+id/four_dollar_sign_button"
                android:layout_width="@dimen/price_radio_button_width"
                android:layout_height="match_parent"
                android:elevation="8dp"
                android:textAlignment="center"
                android:text="@string/four_dollar_sign"
                android:background="@drawable/price_button_effect"
                android:onClick="onPriceButtonClick" />
        </LinearLayout>
    </LinearLayout>



    <android.widget.Button
        android:id="@+id/spin_button"
        android:layout_width="@dimen/spin_roulette_button_radius"
        android:layout_height="@dimen/spin_roulette_button_radius"
        android:text="@string/spin_button_text"
        android:textSize="@dimen/large_text_size"
        android:background="@drawable/riple_spin_button"
        android:onClick="onSpinButtonClick"
        android:clickable="true"
        android:stateListAnimator="@null"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/price_linear_layout"
        android:contentDescription="@string/spin_button_description"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>